# Pascal0_Compiler

./: trabalho-prt.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
examples/: fact.pas0  test.txt
src/: Assembly.hi  Assembly.hs  DataTypes.hi  DataTypes.hs  Generator.hi  Generator.hs  Lexer.hi  Lexer.hs  Lexer.x  Main.hi  Main.hs  Parser.hs  Parser.info  Parser.y  TypeCheck.hs  cur
