cabal-version:      2.4
name:               trabalho-prt
version:            0.1.0.1

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hasuru
maintainer:         hugo.as.silva25@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable trabalho-prt
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Lexer, Parser, DataTypes

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-tools:      alex, happy
    build-depends:    base ^>=4.14.3.0, array, text
    hs-source-dirs:   src
    default-language: Haskell2010
